--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -103,3 +103,86 @@
     right: 0;
     width: 0;
    }
+
+.card{
+ border-radius: 10px;
+ width: 100%;
+ height: 300px;
+ max-width: 1000px;
+ display: flex;
+ justify-content: space-between;
+ flex-direction: row;
+ align-items: center;
+ background-color: #1d232a;
+ color: white;
+ padding: 1rem;
+}
+
+.card > img{
+    width: 300px;
+    image-orientation: center;
+    object-fit: cover;
+}
+
+#projects{
+    padding: 2rem;
+}
+
+@media screen and (max-width: 768px){
+    .fancy {
+        display: none;
+    }
+    .fancy:hover {
+        display: none;
+    }
+    .fancy:hover::before {
+        display: none;
+    }
+    .fancy:hover .text {
+        display: none;
+    }
+    .fancy:hover .top-key {
+        display: none;
+    }
+    .fancy:hover .bottom-key-1,
+    .fancy:hover .bottom-key-2 {
+        display: none;
+    }
+    .fancy .text {
+        display: none;
+    }
+    .fancy .top-key {
+        display: none;
+    }
+    .fancy .bottom-key-1 {
+        display: none;
+    }
+    .fancy .bottom-key-2 {
+        display: none;
+    }
+
+    .card{
+        border-radius: 10px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        background-color: #1d232a;
+        color: white;
+        height: 100%;
+        margin-right: 1rem;
+    }
+    .card > img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+    #projects{
+        padding: 10px;
+
+    }
+
+    
+}
